; ModuleID = '/home/carl/AnghaBench/freebsd/sys/geom/journal/extr_g_journal.c_g_journal_find_desc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/geom/journal/extr_g_journal.c_g_journal_find_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.g_journal_desc = type { i32 }

@g_journal_filesystems = common dso_local global %struct.g_journal_desc** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.g_journal_desc* (i8*)* @g_journal_find_desc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.g_journal_desc* @g_journal_find_desc(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.g_journal_desc*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load %struct.g_journal_desc**, %struct.g_journal_desc*** @g_journal_filesystems, align 8
  store i32 0, i32* %4, align 4
  %6 = getelementptr inbounds %struct.g_journal_desc*, %struct.g_journal_desc** %5, i64 0
  %7 = load %struct.g_journal_desc*, %struct.g_journal_desc** %6, align 8
  store %struct.g_journal_desc* %7, %struct.g_journal_desc** %3, align 8
  br label %8

8:                                                ; preds = %20, %1
  %9 = load %struct.g_journal_desc*, %struct.g_journal_desc** %3, align 8
  %10 = icmp ne %struct.g_journal_desc* %9, null
  br i1 %10, label %11, label %27

11:                                               ; preds = %8
  %12 = load %struct.g_journal_desc*, %struct.g_journal_desc** %3, align 8
  %13 = getelementptr inbounds %struct.g_journal_desc, %struct.g_journal_desc* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i8*, i8** %2, align 8
  %16 = call i64 @strcmp(i32 %14, i8* %15)
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %11
  br label %27

19:                                               ; preds = %11
  br label %20

20:                                               ; preds = %19
  %21 = load %struct.g_journal_desc**, %struct.g_journal_desc*** @g_journal_filesystems, align 8
  %22 = load i32, i32* %4, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %4, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.g_journal_desc*, %struct.g_journal_desc** %21, i64 %24
  %26 = load %struct.g_journal_desc*, %struct.g_journal_desc** %25, align 8
  store %struct.g_journal_desc* %26, %struct.g_journal_desc** %3, align 8
  br label %8

27:                                               ; preds = %18, %8
  %28 = load %struct.g_journal_desc*, %struct.g_journal_desc** %3, align 8
  ret %struct.g_journal_desc* %28
}

declare dso_local i64 @strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
